<resources>
    <string name="app_name">KZkin</string>
    <!-- Product Section-->
    <string name="title_insert_product">Insert Product Form</string>
    <string name="title_update_product">Update Product Form</string>
    <string name="label_update_product">Update Product</string>
    <string-array name="product_categories">
        <item>Skincare</item>
        <item>Make Up</item>
        <item>Haircare</item>
        <item>Fragrances</item>
    </string-array>
    <string-array name="product_sort">
        <item>Oldest - Newest Product</item>
        <item>Newest - Oldest Product</item>
        <item>Highest - Lowest Rating</item>
        <item>Lowest - Highest Rating</item>
    </string-array>
    <string name="label_product_name">Product Name</string>
    <string name="label_product_brand">Product Brand</string>
    <string name="label_product_category">Product Category</string>
    <string name="label_product_description">Product Description</string>
    <string name="label_image">Select Image</string>
    <string name="label_date">Select Date</string>
    <string name="label_submit">Submit</string>
    <string name="title_home">Home</string>
    <string name="subtitle_hottest_product">Hottest Product</string>
    <string name="subtitle_products">Products</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="err_field_empty">All field must be filled</string>
    <string name="err_desc">Description must more than 10 characters</string>
    <string name="succ_img">Image Uploaded</string>
    <string name="err_img">Failed Upload Image</string>
    <string name="succ_submit">Success submit data</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <!--    User Section-->
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="link_register">Doesn’t have account? Sign up</string>
    <string name="link_login">Already have account? Sign in</string>
    <string name="label_or">Or</string>
    <string name="label_login_google">Login with Google</string>
    <string name="label_name">Name</string>
    <string name="label_password">Password</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_email">Email</string>
    <string name="label_dob">Date of Birth</string>
    <string name="label_skin_type">Skin type</string>
    <string name="label_gender">Gender</string>
    <string-array name="skin_type">
        <item>Oily Skin</item>
        <item>Dry Skin</item>
        <item>Normal Skin</item>
        <item>Combination Skin</item>
    </string-array>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="err_name">Name must more than 5 characters</string>
    <string name="err_pass">Password must more than 8 characters</string>
    <string name="err_phone">Phone Number must more than 12 characters</string>
    <string name="err_email_format">Email incorrect format</string>
    <string name="err_age">Age must more than 17</string>
    <string name="err_email_unique">Email must be unique</string>
    <string name="succ_regis">Successfully register account</string>
    <string name="succ_login">Successfully login</string>
    <string name="err_login">Invalid account</string>
    <string name="err_regis">Failed register account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_setting">Setting</string>
    <!--    Review Section-->
    <string name="label_review">Review</string>
    <string name="label_add_review">Add Review</string>
    <string name="title_insert_review">Insert Review</string>
    <string name="label_rating">Rating</string>
    <string name="err_update_profile">Please update your profile</string>
    <string name="title_update_review">Update Review</string>
    <string name="succ_delete">Success Delete Data</string>
    <string name="title_filter">Filter Review</string>
    <string name="label_filter_most_liked">Most Liked Review</string>
    <string name="label_filter_skin_type">Skin Type</string>
    <string name="label_filter_age">Age</string>
    <string name="label_reset">Reset</string>
    <string name="add">Add</string>
    <string-array name="label_rating">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string name="label_update_profile">Update Profile</string>
    <string name="label_logout">Logout</string>
    <string name="label_delete_account">Delete Account</string>
    <string name="label_font_size">Font Size</string>
    <string name="label_setting_notif">Allow Notifications</string>
    <string name="total_likes">Total Likes</string>
    <string name="total_review">Created Review</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="title_notificiation">Notification</string>
    <string name="notif_desc">liked your review</string>
    <string name="title_notif">KZkin Notification</string>
    <string name="large">Large</string>
    <string name="enable">Enable</string>
    <string name="old">years old</string>
    <string name="activity">Activity</string>
</resources>